--- a/index.html
+++ b/index.html
@@ -10,19 +10,28 @@
 </head>
 
 <body>
-    <h1>Made with <span style="color: red;">&#10084;</span> by Arvind Kumar Anand</h1>
-    <h1>Simon Says Game</h1>
-    <h2>Press Any Key to Start the Game</h2>
-    <div class="btn-container">
-        <div class="upper-btns">
-            <div class="btn red" type="button" id="red"></div>
-            <div class="btn yellow" type="button" id="yellow"></div>
+    <header>
+        <h1>Made with <span style="color: red;">&#10084;</span> by Arvind Kumar Anand</h1>
+        <h1>Simon Says Game</h1>
+        <h2>Press Any Key to Start the Game</h2>
+    </header>
+
+    <main class="game-container">
+        <div class="btn-container">
+            <div class="upper-btns">
+                <div class="btn red" type="button" id="red" aria-label="Red Button"></div>
+                <div class="btn yellow" type="button" id="yellow" aria-label="Yellow Button"></div>
+            </div>
+            <div class="lower-btns">
+                <div class="btn green" type="button" id="green" aria-label="Green Button"></div>
+                <div class="btn purple" type="button" id="purple" aria-label="Purple Button"></div>
+            </div>
         </div>
-        <div class="lower-btns">
-            <div class="btn green" type="button" id="green"></div>
-            <div class="btn purple" type="button" id="purple"></div>
-        </div>
-    </div>
+    </main>
+
+    <footer>
+        <p>© 2024 Arvind Kumar Anand | All Rights Reserved</p>
+    </footer>
 
     <script src="script.js"></script>
 </body>
